
2009-04-10 12:24 Ali aliov@xfce.org 
	 * : Provide a wake up signal to avoid possible multiple sleep/hibernate request

2009-04-10 12:00 Ali aliov@xfce.org 
	 * : Fall back to HAL in case we fail to map X11 keys

2009-04-08 17:45 Ali aliov@xfce.org 
	 * : Fix some Glib warnings

2009-04-08 13:45 Ali aliov@xfce.org 
	 * : Properly unref the device object when battery is removed+fix shutdown callback

2009-04-08  0:23 Ali aliov@xfce.org 
	 * : Fix issue with battery ref count that was causing a crash when hald restarts

2009-04-07 13:23 Ali aliov@xfce.org 
	 * : Implement a clean way to restart HAL related objects when HALD restarts

2009-04-07 11:16 Ali aliov@xfce.org 
	 * : Updates on the brightness plugin to act like a menu so it will close the popup when it doesn't have input focus

2009-04-06 19:47 Ali aliov@xfce.org 
	 * : Fix some typos

2009-04-06 16:06 Ali aliov@xfce.org 
	 * : Correct tooltip in the brightness plugin

2009-04-06 14:37 Ali aliov@xfce.org 
	 * : Change brightness on scroll mouse events

2009-04-06 10:54 Ali aliov@xfce.org 
	 * : Fix a warning the inhibit panel plugin when full debug is enabled+make settings dialog correctly resizable

2009-04-06 10:50 Ali aliov@xfce.org 
	 * : Added inhibit screen saver option in the inhibit plugin

2009-04-06  8:45 Ali aliov@xfce.org 
	 * : Fix untranslated panel plugins comment

2009-04-05 21:06 Ali aliov@xfce.org 
	 * : The battery critical level was not shown correctly in the settings dialog

2009-04-05 20:31 Ali aliov@xfce.org 
	 * : Include missing config.h in xfpm-battery-info

2009-04-05 19:40 Ali aliov@xfce.org 
	 * : Fix bug: 5193, the help document in the settings dialog

2009-04-04 13:58 Ali aliov@xfce.org 
	 * : Alpha2 release

2009-04-04 11:30 Ali aliov@xfce.org 
	 * : Fix issue with multiple suspend callback

2009-04-03 13:37 Ali aliov@xfce.org 
	 * : Fix issue with battery critical level in the settings dialog

2009-04-02 19:05 Ali aliov@xfce.org 