@@ -41,6 +41,7 @@
 
 #include "xfce-power-manager-dbus-client.h"
 #include "xfpm-manager.h"
+#include "xfpm-session.h"
 
 static void
 show_version()
@@ -64,6 +65,7 @@ int main(int argc, char **argv)
     gboolean version    = FALSE;
     gboolean no_daemon  = FALSE;
     gboolean reload     = FALSE;
+    gchar    *client_id = NULL;
     
     xfce_textdomain (GETTEXT_PACKAGE, LOCALEDIR, "UTF-8");
 
@@ -75,6 +77,7 @@ int main(int argc, char **argv)
 	{ "customize", 'c', G_OPTION_FLAG_IN_MAIN, G_OPTION_ARG_NONE, &config, N_("Show the configuration dialog"), NULL },
 	{ "quit", 'q', G_OPTION_FLAG_IN_MAIN, G_OPTION_ARG_NONE, &quit, N_("Quit any running xfce power manager"), NULL },
 	{ "version", 'V', G_OPTION_FLAG_IN_MAIN, G_OPTION_ARG_NONE, &version, N_("Version information"), NULL },
+	{ "sm-client-id", 0, G_OPTION_FLAG_HIDDEN, G_OPTION_ARG_STRING, &client_id, NULL, NULL },
 	{ NULL, },
     };
 
@@ -227,14 +230,24 @@ int main(int argc, char **argv)
     else
     {	
 	TRACE("Starting the power manager\n");
+	XfpmSession *session;
+	session = xfpm_session_new ();
+	
+	if ( client_id != NULL )
+	    xfpm_session_set_client_id (session, client_id);
+	
 	if ( no_daemon == FALSE && daemon(0,0) )
 	{
 	    g_critical ("Could not daemonize");
 	}
+	
     	XfpmManager *manager;
     	manager = xfpm_manager_new(bus);
     	xfpm_manager_start(manager);
 	gtk_main();
+	
+	g_object_unref (session);
     }
+    
     return EXIT_SUCCESS;
 }
