@@ -1,4 +1,7 @@
 
+2009-04-10 16:00 Ali aliov@xfce.org 
+	 * : Connect to the session using libxfcegui4 and properly shutdown when the session dies
+
 2009-04-10 12:24 Ali aliov@xfce.org 
 	 * : Provide a wake up signal to avoid possible multiple sleep/hibernate request
 
